# physfs-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
include/PhysFS/: PhysFS.hpp
source/: CMakeLists.txt
source/PhysFS/: PhysFS.cpp
